# sfc-course-materials

./: .gitignore  CLAUDE.md  GDRIVE_STRUCTURE.md  README.md  gdrive_structure.json  pyproject.toml  state.json
async-reading/: RESOURCE_INDEX.md  SUGGESTED_UPDATES.md  check_links.py  class-1-1.json  class-1-1.md  class-1-2.json  class-1-2.md  class-2.json  class-2.md  class-3.json  class-3.md  class-4.json  class-4.md  class-5.json  class-5.md  convert_to_markdown.py  extract_resources.py  fetch_courses.sh  link_check_results.json
reviews/: assignment-1-review.md  async-reading-changes.diff  class-1-1-1-2-review.md  class-1-deep-review.md  class-2-deep-review.md  class-3-deep-review.md  class-4-deep-review.md  class-5-deep-review.md  course-summation-report.md
src/sfc_course_materials/: __init__.py  gdrive_explorer.py
