[project]
name = "sfc-course-materials"
version = "0.1.0"
description = "Course materials for Software For Climate course"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfc_course_materials"]
